# apidoc-checker

./: LICENSE  README.md  apidoc-checker.cabal  stack.yaml
app/: Main.hs
elisp/: apidoc-checker.el
resources/: malformed.json
src/Apidoc/: Check.hs  DSL.hs  Env.hs  Err.hs  Json.hs  Orphans.hs  Parser.hs  Pos.hs  Render.hs  Spec.hs  Uri.hs  Utils.hs
src/Apidoc/Check/: CheckM.hs  CheckObject.hs  DSL.hs  Env.hs  Err.hs  Internal.hs  Lenses.hs  Parsers.hs
src/Apidoc/DSL/: Lenses.hs  Types.hs
src/Apidoc/Json/: Lenses.hs  Parser.hs  Types.hs
src/Control/Applicative/: Validation.hs
test/Apidoc/: JsonSpec.hs  ParserSpec.hs
test/resources/: api.json
