name:                apidoc-checker
version:             0.1.0.0
synopsis:            A command-line tool to verify apidoc specifications
description:         Please see README.md
homepage:            https://github.com/chrisbarrett/apidoc-checker#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Barrett
maintainer:          chris.d.barrett@me.com
copyright:           Chris Barrett
category:            Languages, Tools, Syntax Checkers, Apidoc
build-type:          Simple
cabal-version:       >=1.10
data-files:          resources/*.json

library
  hs-source-dirs:      src
  exposed-modules:     Apidoc.DSL
                     , Apidoc.Json
                     , Apidoc.Parser
  build-depends:       base
                     , ansi-wl-pprint
                     , bytestring
                     , containers
                     , edit-distance
                     , lens
                     , mtl
                     , network-uri
                     , parsers
                     , text
                     , trifecta
                     , validation
  default-language:    Haskell2010

executable apidoc-checker
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ansi-wl-pprint
                     , apidoc-checker
                     , bytestring
                     , optparse-applicative
                     , text
                     , trifecta
                     , validation
  default-language:    Haskell2010

test-suite apidoc-checker-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , apidoc-checker
                     , bytestring
                     , containers
                     , hspec
                     , validation
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/chrisbarrett/apidoc-checker
