name:                apidoc-checker
version:             0.1.0.0
synopsis:            A command-line tool to verify apidoc specifications
description:         Please see README.md
homepage:            https://github.com/chrisbarrett/apidoc-checker#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Barrett
maintainer:          chris.d.barrett@me.com
copyright:           Chris Barrett
category:            Languages, Tools, Syntax Checkers, Apidoc
build-type:          Simple
cabal-version:       >=1.10
data-files:          resources/*.json

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Apidoc.Check
                     , Apidoc.Check.Err
                     , Apidoc.Check.Env
                     , Apidoc.Check.DSL
                     , Apidoc.Check.Lenses
                     , Apidoc.Check.Parsers
                     , Apidoc.Render
                     , Apidoc.DSL
                     , Apidoc.DSL.Lenses
                     , Apidoc.DSL.Types
                     , Apidoc.Json
                     , Apidoc.Json.Lenses
                     , Apidoc.Json.Parser
                     , Apidoc.Json.Types
                     , Apidoc.Pos
                     , Control.Applicative.Validation
  build-depends:       base
                     , ansi-wl-pprint
                     , bytestring
                     , containers
                     , edit-distance
                     , free
                     , lens
                     , mtl
                     , network-uri
                     , semigroups
                     , parsers
                     , text
                     , trifecta
  default-language:    Haskell2010

executable apidoc-checker
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , ansi-wl-pprint
                     , apidoc-checker
                     , bytestring
                     , containers
                     , lens
                     , mtl
                     , optparse-applicative
                     , text
                     , trifecta
                     , utf8-string
  default-language:    Haskell2010

test-suite apidoc-checker-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , apidoc-checker
                     , bytestring
                     , containers
                     , hspec
                     , lens
  other-modules:       Apidoc.JsonSpec
                     , Apidoc.ParserSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/chrisbarrett/apidoc-checker
